# observability-assistant

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENT_SELF_DIRECTION_INVESTIGATION.md  AGENT_SELF_DIRECTION_QUICK_REFERENCE.md  AGENT_SELF_DIRECTION_README.md  BEFORE_AFTER_COMPARISON.md  BUGFIX_TOOL_SIDEBAR.md  CODE_REVIEW.md  COPILOT_403_FIX_INVESTIGATION.md  EXPANDABLE_RESULTS_IMPLEMENTATION.md  IMPLEMENTATION_COMPLETE_EXPANDABLE_RESULTS.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_TEST_COMPLETION_REPORT.md  INVESTIGATION_DELIVERY_SUMMARY.md  INVESTIGATION_INDEX.md  INVESTIGATION_SUMMARY.md  ISSUES_FOR_JACKIE.md  LICENSE  LOGAI_IMPLEMENTATION_ROADMAP.md  MAX_TOOL_ITERATIONS_IMPLEMENTATION.md  OPENCODE_AUTH_INVESTIGATION.md  OPENCODE_TECHNICAL_DETAILS.md  PHASE5_SUMMARY.md  PHASE6_SUMMARY.md  PHASE_3_IMPLEMENTATION_SUMMARY.md  PHASE_3_QUICK_REFERENCE.md  README.md  SIDEBAR_ENHANCEMENT_SUMMARY.md  SIDEBAR_VISUAL_COMPARISON.md  TASK_COMPLETE_MAX_TOOL_ITERATIONS.md  TESTING_GUIDE.md  TOOL_SIDEBAR_IMPLEMENTATION.md  logai_dev.py  pyproject.toml  raoul-phase1-test-report.md
docs/: ollama-setup.md  phase7-completion.md  tui.md
docs/user-guide/: README.md  cli-reference.md  configuration.md  examples.md  features.md  getting-started.md  runtime-commands.md  troubleshooting.md
examples/: README.md  demo_phase5.py  demo_phase6.py
george-scratch/: AGENT_SELF_DIRECTION_DESIGN.md  AVAILABLE_TOOLS_REFERENCE.md  EXECUTIVE-SUMMARY-QA.md  FEATURE_DEVELOPMENT_WORKFLOW.md  GITHUB_COPILOT_FIX_SUMMARY.md  LOCAL_DEPLOYMENT_GUIDE.md  PRODUCTION_READY_SUMMARY.md  PROJECT_STATUS.md  QA_SIGNOFF_SUMMARY.md  SESSION_2026-02-10_ollama-tool-calling.md  SESSION_2026-02-11_cli-arguments.md  SESSION_STATE_2026-02-11.md  TOOLS_DOCUMENTATION_INDEX.md  TOOLS_DOCUMENTATION_MANIFEST.txt  TOOLS_SUMMARY.md  TOOL_SIDEBAR_DESIGN.md  TOOL_SIDEBAR_MANUAL_TEST_GUIDE.md  TOOL_SIDEBAR_TEST_REPORT.md  TUI_ARCHITECTURE_INVESTIGATION.md  TUI_INVESTIGATION_INDEX.md  TUI_SIDEBAR_QUICK_REFERENCE.md  architecture-github-copilot-integration.md  architecture-preload-log-groups.md  architecture.md  code-review-preload-log-groups.md  feature-aws-profile-cli-arg.md  feature-github-models-provider.md  implementation-preload-log-groups.md  mvp-implementation-plan.md  qa-report-preload-log-groups.md  qa-summary-preload-log-groups.md  requirements-github-copilot-integration.md  requirements-preload-log-groups.md  requirements.md
scripts/: format.sh  test.sh  test_api_parameters.py  test_copilot_integration.py  test_github_copilot_provider.py  test_github_copilot_smoke.py
src/logai/: __init__.py  __main__.py  cli.py
src/logai/auth/: __init__.py  github_copilot_auth.py  token_storage.py
src/logai/cache/: __init__.py  manager.py  sqlite_store.py
src/logai/config/: __init__.py  settings.py  validation.py
src/logai/core/: __init__.py  intent_detector.py  log_group_manager.py  metrics.py  orchestrator.py  sanitizer.py
src/logai/core/context/: __init__.py  budget_tracker.py  result_cache.py  token_counter.py
src/logai/core/tools/: __init__.py  base.py  cloudwatch_tools.py  registry.py
src/logai/providers/datasources/: __init__.py  base.py  cloudwatch.py
src/logai/providers/llm/: __init__.py  base.py  github_copilot_models.py  github_copilot_provider.py  litellm_provider.py
src/logai/tools/: __init__.py  fetch_cached_result.py
src/logai/ui/: __init__.py  app.py  commands.py
src/logai/ui/screens/: __init__.py  chat.py
src/logai/ui/styles/: app.tcss
src/logai/ui/widgets/: __init__.py  input_box.py  log_groups_sidebar.py  messages.py  status_bar.py  status_footer.py  tool_sidebar.py
src/logai/utils/: __init__.py  time.py
tests/: conftest.py
tests/integration/: README.md  TEST_SUMMARY.md  test_agent_retry_behavior.py  test_intent_detection_e2e.py  test_log_group_preloading.py  test_log_groups_sidebar_integration.py
tests/unit/: test_auth_module.py  test_cache_manager.py  test_cli.py  test_cloudwatch.py  test_cloudwatch_tools.py  test_commands.py  test_github_copilot_auth.py  test_llm_provider.py  test_log_group_manager.py  test_log_groups_sidebar.py  test_metrics.py  test_orchestrator.py  test_phase5_integration.py  test_sanitizer.py  test_settings.py  test_sqlite_store.py  test_status_footer_render.py  test_time.py  test_token_storage.py  test_tools.py  test_ui_widgets.py  test_validation.py
tests/unit/core/: test_orchestrator_context.py
tests/unit/core/context/: __init__.py  test_budget_tracker.py  test_result_cache.py  test_token_counter.py
tests/unit/tools/: test_fetch_cached_result.py
tests/unit/ui/: test_status_bar_context.py
